MMA-1062 La til skall for kall mot bisys. Parallelle kall mot psak og gsak. Samt pep for sak og journalpost.